# ccc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/design/: DESIGN.md  ui-guide.md
docs/design/mockups/: data-model.html  main.html
src/: app.rs  main.rs
src/parser/: jsonl.rs
src/render/: markdown.rs
src/search/: fuzzy.rs
src/store/: session.rs
src/tui/: branch_pane.rs  keybindings.rs  layout.rs  message_pane.rs  mod.rs  preview_pane.rs  search_bar.rs
