[package]
name = "ccc"
version = "0.1.0"
edition = "2021"
description = "Fuzzy search TUI for Claude Code chat history"
license = "MIT"
repository = "https://github.com/masahirosenda/ccc"
keywords = ["claude", "tui", "search", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
nucleo = "0.5"
pulldown-cmark = "0.12"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-width = "0.2"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
